k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cta-backend
  namespace: cta-app
  labels:
    app: cta-backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: cta-backend
  template:
    metadata:
      labels:
        app: cta-backend
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      containers:
      - name: cta-backend
        image: diegomoronha/cta-backend:latest
        ports:
        - containerPort: 4000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
