k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cta-backend-svc
  namespace: cta-app
spec:
  selector:
    app: cta-backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
